// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files 1`] = `
Array [
  "class-diagram.html",
  "class-diagram.md",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: class-diagram.html 1`] = `
"<html>
  <head>
    <script src=\\"https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js\\"></script>
    <script>mermaid.initialize({startOnLoad:true});</script>
  </head>
  <body>
    <div class=\\"mermaid\\">
classDiagram

  MessageDto ..> Recipient

  class Recipient{
    +uuid: id
    +string: ultiId
    +string: firstName
    +string: middleName
    +string: lastName
    +string: cellPhone1
    +string: homePhone1
  }
  class MessageDto{
    +uuid: id
    +string: body
    +Recipient[]: recipients;
  }
    </div>
    <div style=\\"font-family: Arial, Helvetica, sans-serif; font-size: small;\\">
      This file was generated by the <a href=\\"https://www.npmjs.com/package/openapi-mermaid\\">openapi-mermaid</a> tool.
    </div>
  </body>

  </body>
</html>
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: class-diagram.md 1`] = `
"\`\`\`mermaid
classDiagram

  MessageDto ..> Recipient

  class Recipient{
    +uuid: id
    +string: ultiId
    +string: firstName
    +string: middleName
    +string: lastName
    +string: cellPhone1
    +string: homePhone1
  }
  class MessageDto{
    +uuid: id
    +string: body
    +Recipient[]: recipients;
  }
\`\`\`
This file was generated by the [openapi-mermaid](https://www.npmjs.com/package/openapi-mermaid) tool.
"
`;
